invoice page alignment fixes

--- a/src/app/invoice-page/invoice-page.component.scss
+++ b/src/app/invoice-page/invoice-page.component.scss
@@ -164,7 +164,7 @@
     box-shadow: none;
     border-radius: 0;
     padding: 0;
-    width: 148mm;
-    /* min-height removed to prevent blank second page */
+    width: 210mm; /* A4 width */
+    margin: 0 auto;
   }
 }
